# task-app

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/dependencies/: auth.py
app/api/routes/: auth.py  router.py  task.py  user.py
app/common/: constants.py  enums.py  exceptions.py  query.py  responses.py  validators.py
app/core/: config.py  exception_handlers.py  jwt.py  security.py
app/db/: session.py
app/db/models/: __init__.py  password_reset_token.py  refresh_token.py  task.py  user.py
app/inntegrations/: mailgun.py
app/schemas/: auth.py  base.py  common.py  password.py  task.py  token.py  user.py
app/security/: oauth2.py
app/services/: auth_service.py  email_service.py  password_reset_service.py  refresh_token_service.py  task_service.py  user_service.py
migrations/: env.py
migrations/versions/: 08eb10b60b1e_added_password_field.py  16f991c4c604_create_password_reset_tokens.py  35a936e56b09_time_fields_update_task_model.py  4a7b156db559_create_users_table.py  59d856dd7099_added_task_model.py  5ac64eb3fd7d_updated_task_model.py  c676fce8e7fd_add_authentication_models.py
